# Enose-on-ESP32

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults.esp32s3  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  dl_model.cpp  dl_model.hpp  esp_lcd_touch_ft6336u.c  esp_lcd_touch_ft6336u.h  i2c_device.c  i2c_device.h  idf_component.yml  main.cpp  mylvgl.c  mylvgl.h  sdmmc.c  sdmmc.h
models/: model_MTL.espdl
test_data/: E.coli103-12.csv  E.coli105-16.csv  E.coli107-15.csv  Kp102-7.csv  Kp104-5.csv  Kp107-5.csv  Pa104-11.csv  Pa105-15.csv  Pa106-12.csv  Sa-102-10.csv  Sa-106-6.csv  Sa-107-5.csv  Sa102-10.csv  Sa102-11.csv  Sa106-12.csv  Sa107-10.csv
